Add logging to most frontend classes